# X_Renderer

./: CMakeLists.txt  README.md  bash.exe.stackdump  mintty.exe.stackdump
data/shader/: atmosphere.csh  lightculling.csh  lightculling.hsh  shadow.hsh  structures
data/shader/brdf/: brdf.hsh  brdfEval.hsh  surface.hsh
data/shader/common/: convert.hsh  material.hsh
data/shader/ddgi/: probeDebug.fsh  rayHit.csh
data/shader/deferred/: deferred.hsh  direct.csh  geometry.fsh  geometry.vsh
data/shader/impostor/: generate.fsh
data/shader/raytracer/: bvh.hsh  structures.hsh  (+2 more)
libs/ImguiExtension/: CMakeLists.txt  ImguiWrapper.cpp  ImguiWrapper.h
libs/SPIRV-Reflect/: CMakeLists.txt
libs/glslang/: CMakeLists.txt
src/demo/: App.cpp  App.h  CMakeLists.txt
src/engine/: CMakeLists.txt  Camera.cpp  Camera.h  Clock.cpp  Clock.h  Decal.cpp  Decal.h  Display.cpp  Display.h  Engine.cpp  Engine.h  EngineInstance.cpp  EngineInstance.h  Filter.cpp  Filter.h  Font.cpp  Font.h  Log.cpp  Log.h  Main.cpp  Material.cpp  Material.h  RenderList.cpp  RenderList.h  RenderTarget.cpp  RenderTarget.h  System.h  Viewport.cpp  Viewport.h  Window.cpp  Window.h
src/engine/actor/: Actor.h  AudioActor.cpp  AudioActor.h  DecalActor.cpp  DecalActor.h  MeshActor.cpp  MeshActor.h  MovableMeshActor.cpp  MovableMeshActor.h  StaticMeshActor.cpp  StaticMeshActor.h  TransformComponent.hpp  VegetationActor.cpp  VegetationActor.h
src/engine/audio/: AudioData.cpp  AudioData.h  AudioManager.cpp  AudioManager.h  AudioStream.cpp  AudioStream.h
src/engine/buffer/: Buffer.cpp  Buffer.h  IndexBuffer.cpp  IndexBuffer.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
src/engine/common/: Hash.h  Image.h  MathHelper.h  MatrixDecomposition.cpp  MatrixDecomposition.h  NoiseGenerator.h  Packing.cpp  Packing.h  Path.cpp  Path.h  Piecewise.cpp  Piecewise.h  RandomHelper.cpp  RandomHelper.h  Ref.h  UUID.cpp  UUID.h
src/engine/events/: AudioDeviceEvent.h  ControllerAxisEvent.h  ControllerButtonEvent.h  ControllerDeviceEvent.h  DropEvent.h  EventDelegate.h  EventManager.cpp  EventManager.h  FrameEvent.h  KeyboardEvent.h  Keycodes.h  MouseButtonEvent.h  MouseMotionEvent.h  MouseWheelEvent.h  TextInputEvent.h  TouchEvent.h  WindowEvent.h
src/engine/graphics/: ASBuilder.cpp  ASBuilder.h  BLAS.cpp  BLAS.h  Barrier.cpp  Barrier.h  Buffer.cpp  Buffer.h  CommandList.cpp  CommandList.h  Common.h  Descriptor.cpp  Descriptor.h  Extensions.cpp  Extensions.h  Format.h  Framebuffer.cpp  Framebuffer.h  GraphicsDevice.cpp  GraphicsDevice.h  Image.cpp  Image.h  Initializers.cpp  Initializers.h  Instance.cpp  Instance.h  MemoryManager.cpp  MemoryManager.h  MemoryTransferManager.cpp  MemoryTransferManager.h  Pipeline.cpp  Pipeline.h  Profiler.cpp  Profiler.h  QueryPool.cpp  QueryPool.h  Queue.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  (+12 more)
src/engine/input/: Controller.cpp  Controller.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h  Touch.cpp  Touch.h
src/engine/lighting/: AO.cpp  AO.h  Atmosphere.cpp  Atmosphere.h  DirectionalLight.cpp  DirectionalLight.h  EnvironmentProbe.cpp  EnvironmentProbe.h  Fog.h  IrradianceVolume.cpp  IrradianceVolume.h  Light.h  PointLight.cpp  PointLight.h  Reflection.cpp  Reflection.h  SSS.h  Shadow.cpp  Shadow.h  Sky.cpp  Sky.h  Skybox.h  Volumetric.cpp  Volumetric.h  VolumetricClouds.cpp  VolumetricClouds.h
src/engine/loader/: AssetLoader.cpp  AssetLoader.h  ImageLoader.h  MaterialLoader.cpp  MaterialLoader.h  ModelLoader.cpp  ModelLoader.h  ShaderLoader.cpp  ShaderLoader.h  TerrainLoader.cpp  TerrainLoader.h
src/engine/mesh/: DataComponent.h  Impostor.cpp  Impostor.h  Mesh.cpp  Mesh.h  MeshData.cpp  MeshData.h
src/engine/ocean/: Ocean.cpp  Ocean.h  OceanNode.cpp  OceanNode.h  OceanSimulation.cpp  OceanSimulation.h  OceanState.h
src/engine/pipeline/: PipelineConfig.cpp  PipelineConfig.h  PipelineManager.cpp  PipelineManager.h
src/engine/postprocessing/: ChromaticAberration.h  FilmGrain.h  PostProcessing.cpp  PostProcessing.h  Sharpen.h  TAA.cpp  TAA.h  Vignette.h
src/engine/renderer/: AORenderer.cpp  AORenderer.h  AtmosphereRenderer.cpp  AtmosphereRenderer.h  BlurRenderer.cpp  BlurRenderer.h  DDGIRenderer.cpp  DDGIRenderer.h  DecalRenderer.cpp  DecalRenderer.h  DirectLightRenderer.cpp  DirectLightRenderer.h  ExampleRenderer.cpp  ExampleRenderer.h  GBufferDownscaleRenderer.cpp  GBufferDownscaleRenderer.h  ImpostorRenderer.cpp  ImpostorRenderer.h  ImpostorShadowRenderer.cpp  ImpostorShadowRenderer.h  IndirectLightRenderer.cpp  IndirectLightRenderer.h  LightCullingRenderer.cpp  LightCullingRenderer.h  MainRenderer.cpp  MainRenderer.h  OceanRenderer.cpp  OceanRenderer.h  OpaqueRenderer.cpp  OpaqueRenderer.h  PathTracingRenderer.cpp  PathTracingRenderer.h  PointLightRenderer.cpp  PointLightRenderer.h  PostProcessRenderer.cpp  PostProcessRenderer.h  RTReflectionRenderer.cpp  RTReflectionRenderer.h  RenderBatch.cpp  RenderBatch.h  (+23 more)
src/engine/renderer/helper/: CommonStructures.h  GeometryHelper.cpp  GeometryHelper.h  HaltonSequence.cpp  HaltonSequence.h  RayTracingHelper.cpp  RayTracingHelper.h  VegetationHelper.cpp  VegetationHelper.h
src/engine/resource/: Resource.h  ResourceManager.cpp  ResourceManager.h
src/engine/scene/: RTData.cpp  RTData.h  RTStructures.h  Scene.cpp  Scene.h  SceneNode.cpp  SceneNode.h  SpacePartitioning.cpp  SpacePartitioning.h  Vegetation.cpp  Vegetation.h
src/engine/terrain/: Terrain.cpp  Terrain.h  TerrainNode.cpp  TerrainNode.h  TerrainStorage.cpp  TerrainStorage.h  TerrainStorageCell.cpp  TerrainStorageCell.h
src/engine/texture/: Cubemap.cpp  Cubemap.h  Texture.cpp  Texture.h  Texture2D.cpp  Texture2D.h  Texture2DArray.cpp  Texture2DArray.h  Texture3D.cpp  Texture3D.h  TextureAtlas.cpp  TextureAtlas.h  TextureCubeArray.cpp  TextureCubeArray.h
src/engine/tools/: ImpostorTool.cpp  ImpostorTool.h  PerformanceCounter.cpp  PerformanceCounter.h  RayCasting.cpp  RayCasting.h  TerrainTool.cpp  TerrainTool.h
src/engine/volume/: AABB.cpp  AABB.h  BVH.cpp  BVH.h  Frustum.cpp  Frustum.h  Octree.h  Ray.cpp  Ray.h
(+15 files in other folders)
